--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class=" p-4 shadow-xl border-t-2 border-indigo-200 rounded-2xl">
                     <img class="rounded-2xl bg-slate-200 py-6 px-12" src="images/jacket-2.png" alt="">
-                    <h5 class="text-indigo-900 font-bold text-2xl mt-4">Women Leather Jacket</h5>
+                    <h5 class="text-indigo-900 font-bold text-2xl mt-4">Ladies Jacket</h5>
                     <p class="mt-3 text-gray-500">Lorem Ipsum is simply dummy text of the 
                         printing and typesetting industry.</p>
                     <div class="flex  items-center justify-between text-4xl font-bold mt-4">
@@ -77,7 +77,7 @@
                 </div>
                 <div class=" p-4 shadow-xl border-t-2 border-indigo-200 rounded-2xl">
                     <img class="rounded-2xl bg-slate-200 py-6 px-12" src="images/jacket-3.png" alt="">
-                    <h5 class="text-indigo-900 font-bold text-2xl mt-4">Yellow Coat Jacket </h5>
+                    <h5 class="text-indigo-900 font-bold text-2xl mt-4">Women Leather Jacket </h5>
                     <p class="mt-3 text-gray-500">Lorem Ipsum is simply dummy text of the 
                         printing and typesetting industry.</p>
                     <div class="flex  items-center justify-between text-4xl font-bold mt-4">
